--- a/src/WordCounter.css
+++ b/src/WordCounter.css
@@ -1,12 +1,9 @@
-#formButton {
-    height:100%;
-    width: 100%;
-    display: flex;  /* make the row a flex container */
-    align-items: center;
-    text-align: center;
+.form-control {
+    margin-left: 10px !important;
+    margin-right: 10px !important;
 }
 
-.form-control {
-    margin-left: 20px !important;
-    margin-right: 20px !important;
+.panel {
+	max-height: 450px;
+	overflow-y: scroll;
 }
