--- a/src/WordCounterChart.css
+++ b/src/WordCounterChart.css
@@ -2,3 +2,8 @@ div .filler {
     text-align: center;
     padding-top: 100px;
 }
+
+.counter-chart {
+    max-height: 350px;
+    overflow-y: auto;
+}
