--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+/* https://stackoverflow.com/questions/5119711/whats-the-easiest-way-to-put-space-between-2-side-by-side-buttons-in-asp-net */
+.divider{
+  width:5px;
+  height:auto;
+  display:inline-block;
+}
